tests/spectest/type-subtyping.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a8\80\80\80\00\07\50"
  "\00\5e\7f\00\50\01\00\5e\7f\00\50\00\5e\6e\00\50"
  "\00\5e\63\00\00\50\00\5e\64\01\00\50\00\5e\7f\01"
  "\50\01\05\5e\7f\01"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\b3\80\80\80\00\06\50"
  "\00\5f\00\50\01\00\5f\00\50\01\01\5f\01\7f\00\50"
  "\01\02\5f\02\7f\00\63\00\00\50\01\03\5f\03\7f\00"
  "\64\00\00\7e\01\50\01\04\5f\03\7f\00\64\01\00\7e"
  "\01"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\af\80\80\80\00\06\50"
  "\00\5f\00\50\01\00\5f\00\50\00\60\01\64\01\01\6e"
  "\50\01\02\60\01\64\00\01\64\6e\50\01\03\60\01\63"
  "\00\01\64\00\50\01\04\60\01\6b\01\64\01"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\99\80\80\80\00\03\50"
  "\00\5f\01\6e\00\50\01\00\5f\01\64\01\00\50\01\01"
  "\5f\02\64\01\00\7f\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a0\80\80\80\00\02\50"
  "\00\5f\02\7f\00\64\00\00\4e\02\50\01\00\5f\02\7f"
  "\00\64\02\00\50\01\00\5f\02\7f\00\64\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\bb\80\80\80\00\02\4e"
  "\02\50\00\5f\02\7f\00\64\01\00\50\00\5f\02\7e\00"
  "\64\00\00\4e\03\50\01\01\5f\03\7e\00\64\00\00\7f"
  "\00\50\01\00\5f\03\7f\00\64\01\00\7f\00\50\01\01"
  "\5f\03\7e\00\64\03\00\7f\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\ac\80\80\80\00\04\4e"
  "\03\50\00\60\02\7f\64\02\00\50\01\00\60\02\7f\64"
  "\01\00\50\01\01\60\02\7f\64\00\00\60\01\64\00\00"
  "\60\01\64\01\00\60\01\64\02\00\03\84\80\80\80\00"
  "\03\03\04\05\0a\ae\80\80\80\00\03\86\80\80\80\00"
  "\00\20\00\10\00\0b\8a\80\80\80\00\00\20\00\10\00"
  "\20\00\10\01\0b\8e\80\80\80\00\00\20\00\10\00\20"
  "\00\10\01\20\00\10\02\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c8\80\80\80\00\05\4e"
  "\02\50\00\60\00\02\7f\64\01\50\00\60\00\02\7d\64"
  "\00\4e\04\50\01\00\60\00\02\7f\64\05\50\01\01\60"
  "\00\02\7d\64\04\50\01\00\60\00\02\7f\64\03\50\01"
  "\01\60\00\02\7d\64\02\60\01\64\00\00\60\01\64\02"
  "\00\60\01\64\04\00\03\84\80\80\80\00\03\06\07\08"
  "\0a\aa\80\80\80\00\03\86\80\80\80\00\00\20\00\10"
  "\00\0b\8a\80\80\80\00\00\20\00\10\00\20\00\10\01"
  "\0b\8a\80\80\80\00\00\20\00\10\00\20\00\10\02\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\ad\80\80\80\00\04\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\02\00\4e\02\50\01\00\60\00\00\5f"
  "\00\4e\02\50\01\02\60\00\00\5f\00\03\82\80\80\80"
  "\00\01\06\06\87\80\80\80\00\01\64\04\00\d2\00\0b"
  "\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\d5\80\80\80\00\04\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\00"
  "\60\00\00\50\01\01\5f\05\64\00\00\64\00\00\64\02"
  "\00\64\02\00\64\04\00\4e\02\50\01\02\60\00\00\50"
  "\01\03\5f\05\64\00\00\64\02\00\64\00\00\64\02\00"
  "\64\06\00\03\82\80\80\80\00\01\06\06\87\80\80\80"
  "\00\01\64\04\00\d2\00\0b\0a\88\80\80\80\00\01\82"
  "\80\80\80\00\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\ad\80\80\80\00\04\4e"
    "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
    "\00\00\5f\01\64\00\00\4e\02\50\01\00\60\00\00\5f"
    "\00\4e\02\50\01\02\60\00\00\5f\00\03\82\80\80\80"
    "\00\01\06\06\87\80\80\80\00\01\64\04\00\d2\00\0b"
    "\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\02\00\4e\02\50\01\00\60\00\00\5f"
  "\00\03\82\80\80\80\00\01\04\06\87\80\80\80\00\01"
  "\64\00\00\d2\00\0b\0a\88\80\80\80\00\01\82\80\80"
  "\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\df\80\80\80\00\05\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\00"
  "\60\00\00\50\01\01\5f\05\64\00\00\64\00\00\64\02"
  "\00\64\02\00\64\04\00\4e\02\50\01\02\60\00\00\50"
  "\01\03\5f\05\64\00\00\64\02\00\64\00\00\64\02\00"
  "\64\06\00\4e\02\50\01\06\60\00\00\5f\00\03\82\80"
  "\80\80\00\01\08\06\8d\80\80\80\00\02\64\00\00\d2"
  "\00\0b\64\04\00\d2\00\0b\0a\88\80\80\80\00\01\82"
  "\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\02\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\03\83\80\80\80\00\02\00\01\06\99\80\80\80\00"
  "\04\64\00\00\d2\00\0b\64\02\00\d2\00\0b\64\01\00"
  "\d2\01\0b\64\03\00\d2\01\0b\0a\91\80\80\80\00\02"
  "\83\80\80\80\00\00\00\0b\83\80\80\80\00\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c7\80\80\80\00\04\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\4e\02\50\01\00\60\00\01\64\70\50\01\04\60\00"
  "\01\64\04\4e\02\50\01\02\60\00\01\64\70\50\01\06"
  "\60\00\01\64\06\03\83\80\80\80\00\02\04\05\06\b1"
  "\80\80\80\00\08\64\00\00\d2\00\0b\64\02\00\d2\00"
  "\0b\64\00\00\d2\01\0b\64\02\00\d2\01\0b\64\04\00"
  "\d2\00\0b\64\06\00\d2\00\0b\64\05\00\d2\01\0b\64"
  "\07\00\d2\01\0b\0a\91\80\80\80\00\02\83\80\80\80"
  "\00\00\00\0b\83\80\80\80\00\00\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\9b\80\80\80\00\02\4e"
    "\02\50\00\60\00\00\50\01\00\60\00\00\4e\02\50\00"
    "\60\00\00\50\01\00\60\00\00\03\82\80\80\80\00\01"
    "\02\06\87\80\80\80\00\01\64\00\00\d2\00\0b\0a\88"
    "\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\a8\80\80\80\00\03\4e"
    "\02\50\00\60\00\00\50\01\00\60\00\00\4e\02\50\00"
    "\60\00\00\50\01\00\60\00\00\4e\02\50\00\60\00\00"
    "\50\01\02\60\00\00\03\82\80\80\80\00\01\04\06\87"
    "\80\80\80\00\01\64\02\00\d2\00\0b\0a\88\80\80\80"
    "\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\9a\80\80\80\00\04\50"
  "\00\60\00\01\70\50\01\00\60\00\01\63\01\50\01\01"
  "\60\00\01\63\02\60\00\00\03\8b\80\80\80\00\0a\00"
  "\01\02\03\03\03\03\03\03\03\04\85\80\80\80\00\01"
  "\70\01\03\03\07\b7\80\80\80\00\07\03\72\75\6e\00"
  "\03\05\66\61\69\6c\31\00\04\05\66\61\69\6c\32\00"
  "\05\05\66\61\69\6c\33\00\06\05\66\61\69\6c\34\00"
  "\07\05\66\61\69\6c\35\00\08\05\66\61\69\6c\36\00"
  "\09\09\8f\80\80\80\00\01\04\41\00\0b\03\d2\00\0b"
  "\d2\01\0b\d2\02\0b\0a\80\82\80\80\00\0a\84\80\80"
  "\80\00\00\d0\70\0b\84\80\80\80\00\00\d0\01\0b\84"
  "\80\80\80\00\00\d0\02\0b\f9\80\80\80\00\00\02\70"
  "\41\00\11\00\00\0b\02\70\41\01\11\00\00\0b\02\70"
  "\41\02\11\00\00\0b\02\63\01\41\01\11\01\00\0b\02"
  "\63\01\41\02\11\01\00\0b\02\63\02\41\02\11\02\00"
  "\0b\02\63\00\41\00\25\00\fb\16\00\0b\02\63\00\41"
  "\01\25\00\fb\16\00\0b\02\63\00\41\02\25\00\fb\16"
  "\00\0b\02\63\01\41\01\25\00\fb\16\01\0b\02\63\01"
  "\41\02\25\00\fb\16\01\0b\02\63\02\41\02\25\00\fb"
  "\16\02\0b\0c\00\0b\8d\80\80\80\00\00\02\63\01\41"
  "\00\11\01\00\0b\0c\00\0b\8d\80\80\80\00\00\02\63"
  "\01\41\00\11\02\00\0b\0c\00\0b\8d\80\80\80\00\00"
  "\02\63\01\41\01\11\02\00\0b\0c\00\0b\8b\80\80\80"
  "\00\00\41\00\25\00\fb\16\01\0c\00\0b\8b\80\80\80"
  "\00\00\41\00\25\00\fb\16\02\0c\00\0b\8b\80\80\80"
  "\00\00\41\01\25\00\fb\16\02\0c\00\0b"
)
(module instance)
(assert_return (invoke "run"))
(assert_trap (invoke "fail1") "indirect call")
(assert_trap (invoke "fail2") "indirect call")
(assert_trap (invoke "fail3") "indirect call")
(assert_trap (invoke "fail4") "cast")
(assert_trap (invoke "fail5") "cast")
(assert_trap (invoke "fail6") "cast")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\50"
  "\00\60\00\00\60\00\00\03\87\80\80\80\00\06\00\01"
  "\01\01\01\01\04\85\80\80\80\00\01\70\01\02\02\07"
  "\a1\80\80\80\00\04\05\66\61\69\6c\31\00\02\05\66"
  "\61\69\6c\32\00\03\05\66\61\69\6c\33\00\04\05\66"
  "\61\69\6c\34\00\05\09\8c\80\80\80\00\01\04\41\00"
  "\0b\02\d2\00\0b\d2\01\0b\0a\cb\80\80\80\00\06\82"
  "\80\80\80\00\00\0b\82\80\80\80\00\00\0b\8a\80\80"
  "\80\00\00\02\40\41\01\11\00\00\0b\0b\8a\80\80\80"
  "\00\00\02\40\41\00\11\01\00\0b\0b\8a\80\80\80\00"
  "\00\41\01\25\00\fb\16\00\1a\0b\8a\80\80\80\00\00"
  "\41\00\25\00\fb\16\01\1a\0b"
)
(module instance)
(assert_trap (invoke "fail1") "indirect call")
(assert_trap (invoke "fail2") "indirect call")
(assert_trap (invoke "fail3") "cast")
(assert_trap (invoke "fail4") "cast")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\95\80\80\80\00\04\50"
  "\00\60\00\00\50\01\00\60\00\00\50\01\01\60\00\00"
  "\60\00\00\03\86\80\80\80\00\05\01\02\03\03\03\04"
  "\86\80\80\80\00\01\63\01\01\02\02\07\97\80\80\80"
  "\00\03\03\72\75\6e\00\02\05\66\61\69\6c\31\00\03"
  "\05\66\61\69\6c\32\00\04\09\8f\80\80\80\00\01\06"
  "\00\41\00\0b\63\01\02\d2\00\0b\d2\01\0b\0a\c7\80"
  "\80\80\00\05\82\80\80\80\00\00\0b\82\80\80\80\00"
  "\00\0b\9b\80\80\80\00\00\41\00\11\00\00\41\01\11"
  "\00\00\41\00\11\01\00\41\01\11\01\00\41\01\11\02"
  "\00\0b\87\80\80\80\00\00\41\00\11\02\00\0b\87\80"
  "\80\80\00\00\41\00\11\03\00\0b"
)
(module instance)
(assert_return (invoke "run"))
(assert_trap (invoke "fail1") "indirect call")
(assert_trap (invoke "fail2") "indirect call")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\b1\80\80\80\00\05\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\02\00\4e\02\50\01\00\60\00\00\5f"
  "\00\4e\02\50\01\02\60\00\00\5f\00\60\00\01\7f\03"
  "\83\80\80\80\00\02\06\08\07\87\80\80\80\00\01\03"
  "\72\75\6e\00\01\09\85\80\80\80\00\01\03\00\01\00"
  "\0a\94\80\80\80\00\02\82\80\80\80\00\00\0b\87\80"
  "\80\80\00\00\d2\00\fb\14\04\0b"
)
(module instance)
(assert_return (invoke "run") (i32.const 0x1))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\d9\80\80\80\00\05\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\00"
  "\60\00\00\50\01\01\5f\05\64\00\00\64\00\00\64\02"
  "\00\64\02\00\64\04\00\4e\02\50\01\02\60\00\00\50"
  "\01\03\5f\05\64\00\00\64\02\00\64\00\00\64\02\00"
  "\64\06\00\60\00\01\7f\03\83\80\80\80\00\02\06\08"
  "\07\87\80\80\80\00\01\03\72\75\6e\00\01\09\85\80"
  "\80\80\00\01\03\00\01\00\0a\94\80\80\80\00\02\82"
  "\80\80\80\00\00\0b\87\80\80\80\00\00\d2\00\fb\14"
  "\04\0b"
)
(module instance)
(assert_return (invoke "run") (i32.const 0x1))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\b1\80\80\80\00\05\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\00\00\4e\02\50\01\00\60\00\00\5f"
  "\00\4e\02\50\01\02\60\00\00\5f\00\60\00\01\7f\03"
  "\83\80\80\80\00\02\06\08\07\87\80\80\80\00\01\03"
  "\72\75\6e\00\01\09\85\80\80\80\00\01\03\00\01\00"
  "\0a\94\80\80\80\00\02\82\80\80\80\00\00\0b\87\80"
  "\80\80\00\00\d2\00\fb\14\04\0b"
)
(module instance)
(assert_return (invoke "run") (i32.const 0x0))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a7\80\80\80\00\04\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\02\00\4e\02\50\01\00\60\00\00\5f"
  "\00\60\00\01\7f\03\83\80\80\80\00\02\04\06\07\87"
  "\80\80\80\00\01\03\72\75\6e\00\01\09\85\80\80\80"
  "\00\01\03\00\01\00\0a\94\80\80\80\00\02\82\80\80"
  "\80\00\00\0b\87\80\80\80\00\00\d2\00\fb\14\00\0b"
)
(module instance)
(assert_return (invoke "run") (i32.const 0x1))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\e4\80\80\80\00\06\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\00"
  "\60\00\00\50\01\01\5f\05\64\00\00\64\00\00\64\02"
  "\00\64\02\00\64\04\00\4e\02\50\01\02\60\00\00\50"
  "\01\03\5f\05\64\00\00\64\02\00\64\00\00\64\02\00"
  "\64\06\00\4e\02\50\01\06\60\00\00\5f\00\60\00\02"
  "\7f\7f\03\83\80\80\80\00\02\08\0a\07\87\80\80\80"
  "\00\01\03\72\75\6e\00\01\09\85\80\80\80\00\01\03"
  "\00\01\00\0a\99\80\80\80\00\02\82\80\80\80\00\00"
  "\0b\8c\80\80\80\00\00\d2\00\fb\14\00\d2\00\fb\14"
  "\04\0b"
)
(module instance)
(assert_return (invoke "run") (i32.const 0x1) (i32.const 0x1))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\aa\80\80\80\00\03\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\60\00\04\7f\7f\7f\7f\03\84\80\80\80\00\03\00"
  "\01\04\07\87\80\80\80\00\01\03\72\75\6e\00\02\09"
  "\89\80\80\80\00\02\03\00\01\00\03\00\01\01\0a\ac"
  "\80\80\80\00\03\83\80\80\80\00\00\00\0b\83\80\80"
  "\80\00\00\00\0b\96\80\80\80\00\00\d2\00\fb\14\00"
  "\d2\00\fb\14\02\d2\01\fb\14\01\d2\01\fb\14\03\0b"
)
(module instance)
(assert_return
  (invoke "run")
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\d2\80\80\80\00\05\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\4e\02\50\01\00\60\00\01\64\70\50\01\04\60\00"
  "\01\64\04\4e\02\50\01\02\60\00\01\64\70\50\01\06"
  "\60\00\01\64\06\60\00\08\7f\7f\7f\7f\7f\7f\7f\7f"
  "\03\84\80\80\80\00\03\04\05\08\07\87\80\80\80\00"
  "\01\03\72\75\6e\00\02\09\89\80\80\80\00\02\03\00"
  "\01\00\03\00\01\01\0a\c0\80\80\80\00\03\83\80\80"
  "\80\00\00\00\0b\83\80\80\80\00\00\00\0b\aa\80\80"
  "\80\00\00\d2\00\fb\14\00\d2\00\fb\14\02\d2\01\fb"
  "\14\00\d2\01\fb\14\02\d2\00\fb\14\04\d2\00\fb\14"
  "\06\d2\01\fb\14\05\d2\01\fb\14\07\0b"
)
(module instance)
(assert_return
  (invoke "run")
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
  (i32.const 0x1)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\9f\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\50\01\00\60\00\00\4e\02\50\00"
  "\60\00\00\50\01\00\60\00\00\60\00\01\7f\03\83\80"
  "\80\80\00\02\02\04\07\87\80\80\80\00\01\03\72\75"
  "\6e\00\01\09\85\80\80\80\00\01\03\00\01\00\0a\94"
  "\80\80\80\00\02\82\80\80\80\00\00\0b\87\80\80\80"
  "\00\00\d2\00\fb\14\00\0b"
)
(module instance)
(assert_return (invoke "run") (i32.const 0x0))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\ac\80\80\80\00\04\4e"
  "\02\50\00\60\00\00\50\01\00\60\00\00\4e\02\50\00"
  "\60\00\00\50\01\00\60\00\00\4e\02\50\00\60\00\00"
  "\50\01\02\60\00\00\60\00\01\7f\03\83\80\80\80\00"
  "\02\04\06\07\87\80\80\80\00\01\03\72\75\6e\00\01"
  "\09\85\80\80\80\00\01\03\00\01\00\0a\94\80\80\80"
  "\00\02\82\80\80\80\00\00\0b\87\80\80\80\00\00\d2"
  "\00\fb\14\02\0b"
)
(module instance)
(assert_return (invoke "run") (i32.const 0x0))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\03\50"
  "\00\60\00\01\70\50\01\00\60\00\01\63\01\50\01\01"
  "\60\00\01\63\02\03\84\80\80\80\00\03\00\01\02\07"
  "\90\80\80\80\00\03\02\66\30\00\00\02\66\31\00\01"
  "\02\66\32\00\02\0a\9c\80\80\80\00\03\84\80\80\80"
  "\00\00\d0\70\0b\84\80\80\80\00\00\d0\01\0b\84\80"
  "\80\80\00\00\d0\02\0b"
)
(module instance)
(register "M")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\03\50"
  "\00\60\00\01\70\50\01\00\60\00\01\63\01\50\01\01"
  "\60\00\01\63\02\02\ab\80\80\80\00\06\01\4d\02\66"
  "\30\00\00\01\4d\02\66\31\00\00\01\4d\02\66\31\00"
  "\01\01\4d\02\66\32\00\00\01\4d\02\66\32\00\01\01"
  "\4d\02\66\32\00\02"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\03\50"
  "\00\60\00\01\70\50\01\00\60\00\01\63\01\50\01\01"
  "\60\00\01\63\02\02\88\80\80\80\00\01\01\4d\02\66"
  "\30\00\01"
)
(assert_unlinkable (module instance) "incompatible import type")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\03\50"
  "\00\60\00\01\70\50\01\00\60\00\01\63\01\50\01\01"
  "\60\00\01\63\02\02\88\80\80\80\00\01\01\4d\02\66"
  "\30\00\02"
)
(assert_unlinkable (module instance) "incompatible import type")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\03\50"
  "\00\60\00\01\70\50\01\00\60\00\01\63\01\50\01\01"
  "\60\00\01\63\02\02\88\80\80\80\00\01\01\4d\02\66"
  "\31\00\02"
)
(assert_unlinkable (module instance) "incompatible import type")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\50"
  "\00\60\00\00\60\00\00\03\83\80\80\80\00\02\00\01"
  "\07\8b\80\80\80\00\02\02\66\31\00\00\02\66\32\00"
  "\01\0a\8f\80\80\80\00\02\82\80\80\80\00\00\0b\82"
  "\80\80\80\00\00\0b"
)
(module instance)
(register "M2")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\50"
  "\00\60\00\00\60\00\00\02\89\80\80\80\00\01\02\4d"
  "\32\02\66\31\00\01"
)
(assert_unlinkable (module instance) "incompatible import type")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\50"
  "\00\60\00\00\60\00\00\02\89\80\80\80\00\01\02\4d"
  "\32\02\66\32\00\00"
)
(assert_unlinkable (module instance) "incompatible import type")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\02\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\01\00"
  "\60\00\00\5f\00\03\82\80\80\80\00\01\02\07\85\80"
  "\80\80\00\01\01\67\00\00\0a\88\80\80\80\00\01\82"
  "\80\80\80\00\00\0b"
)
(module instance)
(register "M3")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\02\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\01\00"
  "\60\00\00\5f\00\02\88\80\80\80\00\01\02\4d\33\01"
  "\67\00\02"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\b9\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\02"
  "\60\00\00\50\01\03\5f\05\64\00\00\64\02\00\64\00"
  "\00\64\02\00\64\04\00\03\82\80\80\80\00\01\04\07"
  "\85\80\80\80\00\01\01\67\00\00\0a\88\80\80\80\00"
  "\01\82\80\80\80\00\00\0b"
)
(module instance)
(register "M4")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\b9\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\00"
  "\60\00\00\50\01\01\5f\05\64\00\00\64\00\00\64\02"
  "\00\64\02\00\64\04\00\02\88\80\80\80\00\01\02\4d"
  "\34\01\67\00\04"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\00\00\4e\02\50\01\02\60\00\00\5f"
  "\00\03\82\80\80\80\00\01\04\07\85\80\80\80\00\01"
  "\01\67\00\00\0a\88\80\80\80\00\01\82\80\80\80\00"
  "\00\0b"
)
(module instance)
(register "M5")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\02\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\01\00"
  "\60\00\00\5f\00\02\88\80\80\80\00\01\02\4d\35\01"
  "\67\00\02"
)
(assert_unlinkable (module instance) "incompatible import")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\02\00\4e\02\50\01\00\60\00\00\5f"
  "\00\03\82\80\80\80\00\01\04\07\85\80\80\80\00\01"
  "\01\67\00\00\0a\88\80\80\80\00\01\82\80\80\80\00"
  "\00\0b"
)
(module instance)
(register "M6")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\5f\01\64\00\00\4e\02\50\00\60"
  "\00\00\5f\01\64\02\00\4e\02\50\01\00\60\00\00\5f"
  "\00\02\88\80\80\80\00\01\02\4d\36\01\67\00\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c3\80\80\80\00\04\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\02"
  "\60\00\00\50\01\03\5f\05\64\00\00\64\02\00\64\00"
  "\00\64\02\00\64\04\00\4e\02\50\01\04\60\00\00\5f"
  "\00\03\82\80\80\80\00\01\06\07\85\80\80\80\00\01"
  "\01\68\00\00\0a\88\80\80\80\00\01\82\80\80\80\00"
  "\00\0b"
)
(module instance)
(register "M7")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c3\80\80\80\00\04\4e"
  "\02\50\00\60\00\00\50\00\5f\01\64\00\00\4e\02\50"
  "\00\60\00\00\50\00\5f\01\64\02\00\4e\02\50\01\00"
  "\60\00\00\50\01\01\5f\05\64\00\00\64\00\00\64\02"
  "\00\64\02\00\64\04\00\4e\02\50\01\04\60\00\00\5f"
  "\00\02\8f\80\80\80\00\02\02\4d\37\01\68\00\00\02"
  "\4d\37\01\68\00\04"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\02\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\03\83\80\80\80\00\02\00\01\07\8d\80\80\80\00"
  "\02\03\66\31\31\00\00\03\66\31\32\00\01\0a\91\80"
  "\80\80\00\02\83\80\80\80\00\00\00\0b\83\80\80\80"
  "\00\00\00\0b"
)
(module instance)
(register "M8")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\02\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\02\a5\80\80\80\00\04\02\4d\38\03\66\31\31\00"
  "\00\02\4d\38\03\66\31\31\00\02\02\4d\38\03\66\31"
  "\32\00\01\02\4d\38\03\66\31\32\00\03"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c7\80\80\80\00\04\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\4e\02\50\01\00\60\00\01\64\70\50\01\04\60\00"
  "\01\64\04\4e\02\50\01\02\60\00\01\64\70\50\01\06"
  "\60\00\01\64\06\03\83\80\80\80\00\02\04\05\07\8d"
  "\80\80\80\00\02\03\67\31\31\00\00\03\67\31\32\00"
  "\01\0a\91\80\80\80\00\02\83\80\80\80\00\00\00\0b"
  "\83\80\80\80\00\00\00\0b"
)
(module instance)
(register "M9")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c7\80\80\80\00\04\4e"
  "\02\50\00\60\00\01\64\70\50\01\00\60\00\01\64\00"
  "\4e\02\50\00\60\00\01\64\70\50\01\02\60\00\01\64"
  "\02\4e\02\50\01\00\60\00\01\64\70\50\01\04\60\00"
  "\01\64\04\4e\02\50\01\02\60\00\01\64\70\50\01\06"
  "\60\00\01\64\06\02\c9\80\80\80\00\08\02\4d\39\03"
  "\67\31\31\00\00\02\4d\39\03\67\31\31\00\02\02\4d"
  "\39\03\67\31\32\00\00\02\4d\39\03\67\31\32\00\02"
  "\02\4d\39\03\67\31\31\00\04\02\4d\39\03\67\31\31"
  "\00\06\02\4d\39\03\67\31\32\00\05\02\4d\39\03\67"
  "\31\32\00\07"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\9b\80\80\80\00\02\4e"
  "\02\50\00\60\00\00\50\01\00\60\00\00\4e\02\50\00"
  "\60\00\00\50\01\00\60\00\00\03\82\80\80\80\00\01"
  "\02\07\85\80\80\80\00\01\01\66\00\00\0a\88\80\80"
  "\80\00\01\82\80\80\80\00\00\0b"
)
(module instance)
(register "M10")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\01\4e"
  "\02\50\00\60\00\00\50\01\00\60\00\00\02\89\80\80"
  "\80\00\01\03\4d\31\30\01\66\00\00"
)
(assert_unlinkable (module instance) "incompatible import")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a8\80\80\80\00\03\4e"
  "\02\50\00\60\00\00\50\01\00\60\00\00\4e\02\50\00"
  "\60\00\00\50\01\00\60\00\00\4e\02\50\00\60\00\00"
  "\50\01\02\60\00\00\03\82\80\80\80\00\01\04\07\85"
  "\80\80\80\00\01\01\66\00\00\0a\88\80\80\80\00\01"
  "\82\80\80\80\00\00\0b"
)
(module instance)
(register "M11")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\9b\80\80\80\00\02\4e"
  "\02\50\00\60\00\00\50\01\00\60\00\00\4e\02\50\00"
  "\60\00\00\50\01\00\60\00\00\02\89\80\80\80\00\01"
  "\03\4d\31\31\01\66\00\02"
)
(assert_unlinkable (module instance) "incompatible import")
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\00\00\50\01\00\60\00\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\5f"
    "\00\50\01\00\5f\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\00\00\50\01\00\60\00\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\92\80\80\80\00\03\50"
    "\00\60\00\00\4f\01\00\60\00\00\50\01\01\60\00\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\50"
    "\00\5e\7f\00\50\01\00\5f\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\02\50"
    "\00\60\01\7f\01\7f\50\01\00\5f\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\50"
    "\00\5f\00\50\01\00\5e\7f\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\50"
    "\00\60\01\7f\01\7f\50\01\00\5e\7f\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\02\50"
    "\00\5f\00\50\01\00\60\01\7f\01\7f"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\50"
    "\00\5e\7f\00\50\01\00\60\01\7f\01\7f"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8c\80\80\80\00\02\50"
    "\00\5e\7f\00\50\01\00\5e\7e\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\50"
    "\00\5f\01\7f\00\50\01\00\5f\01\7e\00"
  )
  "sub type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\50"
    "\00\5e\64\71\00\50\01\00\5e\64\6e\00"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\50"
    "\00\5e\64\6e\01\50\01\00\5e\64\71\01"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\50"
    "\00\5e\64\6e\01\50\01\00\5e\64\6e\00"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\02\50"
    "\00\5e\64\6e\00\50\01\00\5e\64\6e\01"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\90\80\80\80\00\02\50"
    "\00\5f\01\64\71\00\50\01\00\5f\01\64\6e\00"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\90\80\80\80\00\02\50"
    "\00\5f\01\64\6e\01\50\01\00\5f\01\64\71\01"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\90\80\80\80\00\02\50"
    "\00\5f\01\64\6e\01\50\01\00\5f\01\64\6e\00"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\90\80\80\80\00\02\50"
    "\00\5f\01\64\6e\00\50\01\00\5f\01\64\6e\01"
  )
  "sub type 1 does not match super type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\02\50"
    "\00\60\00\00\50\01\00\60\01\7f\00"
  )
  "sub type"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a8\80\80\80\00\04\50"
  "\00\60\00\01\7d\50\01\00\60\00\01\7d\4f\01\01\60"
  "\00\01\7d\4e\03\60\00\01\7d\50\00\60\00\01\7d\50"
  "\01\04\60\00\01\7d\03\87\80\80\80\00\06\00\01\02"
  "\03\04\05\07\9f\80\80\80\00\06\02\66\31\00\00\02"
  "\66\32\00\01\02\66\33\00\02\02\66\34\00\03\02\66"
  "\35\00\04\02\66\36\00\05\0a\c9\80\80\80\00\06\87"
  "\80\80\80\00\00\43\00\00\00\00\0b\87\80\80\80\00"
  "\00\43\00\00\00\00\0b\87\80\80\80\00\00\43\00\00"
  "\00\00\0b\87\80\80\80\00\00\43\00\00\00\00\0b\87"
  "\80\80\80\00\00\43\00\00\00\00\0b\87\80\80\80\00"
  "\00\43\00\00\00\00\0b"
)
(module instance)
(assert_return (invoke "f1") (f32.const 0x0p+0))
(assert_return (invoke "f2") (f32.const 0x0p+0))
(assert_return (invoke "f3") (f32.const 0x0p+0))
(assert_return (invoke "f4") (f32.const 0x0p+0))
(assert_return (invoke "f5") (f32.const 0x0p+0))
(assert_return (invoke "f6") (f32.const 0x0p+0))
